// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`productTitle debe de mostrar el componente correctamente  1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Prueba 
  </h1>
</div>
`;

exports[`productTitle debe incrementar al contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;
